# opendota-graph

./: .env.example  .gitignore  README.md  api_client.py  docker-compose.yaml  main.py  pipeline.py  pyproject.toml  run_pipeline.py  storage.py
docker/postgres/: init.sql
pipeline/db/: client.py
pipeline/ingestion/: provider.py
pipeline/transformation/: aggregator.py
pipeline/utils/: logger.py
